[WIP]funcao de pesquisa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".PesquisaGeralActivity"
+            android:label="@string/title_activity_pesquisa_geral"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".TopicoActivity"
             android:label="@string/title_activity_topico"
             android:theme="@style/AppTheme.NoActionBar" />
