--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:label="@string/title_activity_topico_post"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ComunidadeActivity"
+            android:name=".ComunidadeActivity2"
             android:label="@string/title_activity_comunidade"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
